# emgm

./: CREDITS  CREDITS.md  LICENSE  README  README.md  Setup.lhs  emgm.cabal
examples/: Ex00StartHere.hs  Ex01UsingFunctions.hs  Ex02AddingDatatypeSupport.hs  Ex03DefiningFunctions.hs
src/Generics/: EMGM.hs
src/Generics/EMGM/: Base.hs  Common.hs  Data.hs  Derive.hs  Functions.hs  Representation.hs
src/Generics/EMGM/Common/: Base.hs  Base2.hs  Base3.hs  Derive.hs  Representation.hs
src/Generics/EMGM/Common/Derive/: Common.hs  ConDescr.hs  EP.hs  Functions.hs  Instance.hs
src/Generics/EMGM/Data/: Bool.hs  Either.hs  List.hs  Maybe.hs  Ratio.hs  TH.hs  Tuple.hs
src/Generics/EMGM/Derive/: Common.hs  ConDescr.hs  EP.hs  Functions.hs  Instance.hs  Internal.hs
src/Generics/EMGM/Functions/: Collect.hs  Compare.hs  Constructor.hs  Crush.hs  Enum.hs  Everywhere.hs  Map.hs  Meta.hs  Read.hs  Show.hs  Transpose.hs  UnzipWith.hs  ZipWith.hs
tests/: A.hs  B.hs  Base.hs  Bimap.hs  Collect.hs  Compare.hs  Crush.hs  Derive.hs  Enum.hs  Everywhere.hs  Main.hs  Map.hs  ReadShow.hs  TTree.hs  UnzipWith.hs  ZipWith.hs
util/: hpc.lhs
